--- a/SolidPlanner/app/src/main/AndroidManifest.xml
+++ b/SolidPlanner/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SolidPlanner">
         <activity
+            android:name=".ViewEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddEventActivity"
+            android:exported="false" />
+        <activity
             android:name=".UserActivity"
             android:exported="false" />
         <activity
